--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ all-of-statistics/.ipynb_checkpoints
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*.dat
 
 # C extensions
 *.so
