--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ all-of-statistics/.ipynb_checkpoints
 __pycache__/
 *.py[cod]
 *.dat
-./**/**/metastore_db
+./**/**/metastore_db/*
+books/learning-spark/metastore_db
 
 # C extensions
 *.so
@@ -30,6 +31,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
